--- a/website/_entries/4400-tts.md
+++ b/website/_entries/4400-tts.md
@@ -4,6 +4,41 @@ sectionid: tts
 parent-id: research
 is-parent: yes
 number: 4400
-title: Text-to-Speech
+title: 4. Speech API
 ---
-Chosen toolchain
+Goal: To make the user interaction easier, to guide our users when navigating and also use speech recognition for sharing/saving the routes.
+
+#### Google Cloud Speech API
+Cloud Speech is a speech recognition API developed by Google. It uses machine learning to improve its accuracy over time. 
+
+Advantages:
+•	Still in beta release, so could be unreliable
+•	Recognises over 80 languages
+•	Streams text results and return partially completed results
+•	Can handle background noise
+•	Can be tailored to the context in which the app is used to improve accuracy
+•	Works across any device (mobile, web and IoT)
+
+Disadvantages:
+•	Not free if monthly usage is above 60 minutes ($0.006 for 15 seconds)
+•	Monthly usage capped at 1,000,000 minutes
+•	Needs to be used in conjunction with Google text-to-speech to access text-to-speech functionalities
+
+
+#### Microsoft Bing Speech API
+
+ Bing Speech API is  a cloud-based API that provides advanced algorithms to process spoken language.
+Advantages:
+•	Recognises intent of speaker, to drive the actions of the application
+•	Can return partial recognition results
+•	Recognition results are returned in the web-standard JSON format
+•	Has both speech-to-text and text-to-speech functionalities
+•	Has many supporting APIs with functionalities such as translating, text analytics, language understanding and speaker recognition
+
+Disadvantages:
+•	Price: Free only until up to 5K calls per month. 
+
+## Result
+Taking under consideration that our client represents Microsoft and also the  fact that we have to use only one API for speech recognition and text-to-speech recognition, we have decided to for the BING SPEECH API.
+
+
